--- a/style.css
+++ b/style.css
@@ -718,7 +718,7 @@ h3 {
 }
 
 h1 {
-    color: #ffffff;
+    color: #000000;
 }
 
 h4 {
@@ -777,7 +777,7 @@ footer .white {
 }
 
 .text {
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: initial;
 }
 
