--- a/style.css
+++ b/style.css
@@ -722,7 +722,7 @@ h1 {
 }
 
 h4 {
-    color: #333333;
+    color: #ffffff;
 }
 
 .icons {
@@ -788,7 +788,7 @@ footer .white {
 
 .btn-atomic-tangerine:hover {
     background: #ff5500;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 .ltc-white {
