--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -56,7 +56,7 @@ a {
 
 a:active,
 a:hover {
-    outline: 0
+    outline: initial
 }
 
 abbr[title] {
@@ -3159,7 +3159,7 @@ output {
 
 .form-control:focus {
     border-color: #66afe9;
-    outline: 0;
+    outline: initial;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6)
 }
@@ -3698,7 +3698,7 @@ textarea.input-lg {
 .btn.active,
 .btn:active {
     background-image: none;
-    outline: 0;
+    outline: initial;
     -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125)
 }
@@ -4299,7 +4299,7 @@ tbody.collapse.in {
 }
 
 .dropdown-toggle:focus {
-    outline: 0
+    outline: initial
 }
 
 .dropdown-menu {
@@ -4360,7 +4360,7 @@ tbody.collapse.in {
     color: #fff;
     text-decoration: none;
     background-color: #337ab7;
-    outline: 0
+    outline: initial
 }
 
 .dropdown-menu>.disabled>a,
@@ -4383,7 +4383,7 @@ tbody.collapse.in {
 }
 
 .open>a {
-    outline: 0
+    outline: initial
 }
 
 .dropdown-menu-right {
@@ -4532,7 +4532,7 @@ tbody.collapse.in {
 
 .btn-group .dropdown-toggle:active,
 .btn-group.open .dropdown-toggle {
-    outline: 0
+    outline: initial
 }
 
 .btn-group>.btn+.dropdown-toggle {
@@ -5226,7 +5226,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 }
 
 .navbar-toggle:focus {
-    outline: 0
+    outline: initial
 }
 
 .navbar-toggle .icon-bar {
@@ -7079,7 +7079,7 @@ button.close {
     display: none;
     overflow: hidden;
     -webkit-overflow-scrolling: touch;
-    outline: 0
+    outline: initial
 }
 
 .modal.fade .modal-dialog {
@@ -7118,7 +7118,7 @@ button.close {
     border: 1px solid #999;
     border: 1px solid rgba(0, 0, 0, .2);
     border-radius: 6px;
-    outline: 0;
+    outline: initial;
     -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
     box-shadow: 0 3px 9px rgba(0, 0, 0, .5)
 }
@@ -7622,7 +7622,7 @@ button.close {
     color: #fff;
     text-decoration: none;
     filter: alpha(opacity=90);
-    outline: 0;
+    outline: initial;
     opacity: .9
 }
 
